@@ -40,7 +40,7 @@
 		<maven-resources-plugin-version>3.3.1</maven-resources-plugin-version>
 		<maven-assembly-plugin-version>3.6.0</maven-assembly-plugin-version>
 		<maven-jxr-plugin-version>3.3.0</maven-jxr-plugin-version>
-		<xtend-version>2.32.0.M2</xtend-version>
+		<xtend-version>2.43.0</xtend-version>
 		<license-maven-plugin-version>4.2.rc3</license-maven-plugin-version>
 		<!-- plugin dependencies -->
 		<velocity-version>1.7</velocity-version>
@@ -53,8 +53,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<os-jvm-flags />
 		<project-url>https://www.tmdmaker.org</project-url>
-		<target-file>2023-06</target-file>
-		<compiler-verion>17</compiler-verion>
+		<target-file>2026-06</target-file>
+		<compiler-verion>25</compiler-verion>
 		<!-- Website dependencies version -->
 		<site-skin-version>2.2.4</site-skin-version>
 		<!-- Other -->
@@ -100,6 +100,15 @@
 			</properties>
 		</profile>
 		<profile>
+			<id>java-25</id>
+			<activation>
+				<jdk>25</jdk>
+			</activation>
+			<properties>
+				<jvm-flags>--add-modules=ALL-SYSTEM --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.desktop/java.beans=ALL-UNNAMED</jvm-flags>
+			</properties>
+		</profile>
+		<profile>
 			<id>mac-sphinx-binary</id>
 			<activation>
 				<os><family>mac</family></os>
@@ -116,6 +125,15 @@
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+		<profile>
+			<id>2026-06</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<target-file>2026-06</target-file>
+			</properties>
 		</profile>
 		<profile>
 			<id>2023-06</id>
@@ -550,7 +568,7 @@
 							<classifier>${target-file}</classifier>
 						</artifact>
 					</target>
-					<executionEnvironment>org.eclipse.justj.openjdk.hotspot.jre.full-17</executionEnvironment>
+					<executionEnvironment>org.eclipse.justj.openjdk.hotspot.jre.full-25</executionEnvironment>
 					<environments>
 						<environment>
 							<os>win32</os>
